# Digital-Direction-New-Platform

./: .env.example  .gitignore  CLAUDE.md  LANGFUSE_QUICK_START.md  PENDING.md  README.md  TODOS.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
backend/: cli.py  config_loader.py  main.py  settings.py
backend/api/: analytics.py  carriers.py  clients.py  dashboard.py  exports.py  review.py  uploads.py
backend/models/: database.py  orm.py  schemas.py
backend/pipeline/: classifier.py  compliance.py  extractor.py  merger.py  orchestrator.py  parser.py  structured_extractor.py  validator.py
backend/services/: auto_carrier_registry.py  carrier_match.py  dedup.py  dropdown_normalizer.py  feedback.py  golden.py  inventory_versions.py  llm.py  master_data.py  spend_ledger.py  storage.py  upload_store.py
backend/utils/: dates.py
configs/processing/: column_dropdowns.yaml  column_mapping.yaml  contract_extraction.md  csr_extraction.md  email_extraction.md  eval_config.yaml  export_template.yaml  invoice_extraction.md  llm_costs.yaml
db/: 00_create_langfuse_db.sh  init.sql
db/migrations/: 2026-04-28_uploads_durable_state.sql  2026-04-28_uploads_extraction_errors.sql  2026-04-29_inventory_versions.sql
docs/: client-onepager.html  client-onepager.md  golden_data_gaps.md  per-file-diagnostic-template.md  pipeline-comparison.html
docs/deploy/: 2026-04-28_phase_b_c_deploy.md
docs/design/: 2026-04-16-extraction-pipeline-design.md  LANGFUSE_INTEGRATION_COMPLETE.md  LANGFUSE_SETUP.md  implementation-plan.md
docs/diagrams/: .$gcp-architecture.drawio.bkp  gcp-architecture-viewer.html  gcp-architecture.drawio  gcp-architecture.excalidraw  gcp-architecture.html
evals/: judge.py  runner.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  (+2 more)
scripts/: add_appendix_slides.py  build_presentation.py  csr_46pp_clean.json  generate_carrier_registry.py  generate_langsmith_report.py  golden_comparison.py  merge_qa.py  merge_qa_output.json  migrate_redis_uploads_to_pg.py  recover_orphan_uploads.py  test_langfuse_integration.py  windstream_merge_qa_data.json
tests/: test_feedback.py
(+129 files in other folders)
